--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        // to allow junit 5 to run on android
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.0.0"
 
 
         // NOTE: Do not place your application dependencies here; they belong
