--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.preference:preference:1.1.1'
     def nav_version = "2.3.2"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
