--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // to allow junit 5 to run on android
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1"
+        classpath 'com.squareup.sqldelight:gradle-plugin:1.5.0'
 
 
         // NOTE: Do not place your application dependencies here; they belong
