--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android:flexbox:2.0.1'
+//    implementation 'com.google.android:flexbox:2.0.1'
 
     // Navigation for Kotlin
     def nav_version = "2.3.5"
@@ -82,11 +82,4 @@ dependencies {
     testImplementation "com.squareup.sqldelight:sqlite-driver:1.5.0"
     // old tests
     // testImplementation 'junit:junit:4.13.1'
-}
-
-sqldelight {
-    EidosDatabase {
-        packageName = "org.eidos.reader"
-        dialect = "sqlite:3.25"
-    }
 }
