--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,18 +68,20 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // non-android dependencies
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-    implementation 'org.jsoup:jsoup:1.13.1'
-    implementation 'com.squareup.moshi:moshi:1.11.0'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
-    implementation 'com.squareup.sqldelight:android-driver:1.5.0'
+    implementation "org.jsoup:jsoup:1.13.1"
+    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.squareup.moshi:moshi:1.11.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
+    implementation "com.squareup.sqldelight:android-driver:1.5.0"
+    implementation "io.coil-kt:coil-base:1.2.2" // no Coil singleton and no ImageView extension functions
+    implementation "io.coil-kt:coil-gif:1.2.2"
 
     // testing
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    testImplementation "com.squareup.sqldelight:sqlite-driver:1.5.0"
+    testImplementation 'com.squareup.sqldelight:sqlite-driver:1.5.0'
     // old tests
     // testImplementation 'junit:junit:4.13.1'
 }
