--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     implementation "androidx.work:work-runtime-ktx:2.5.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-beta02"
 
 
     // Logging
