--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,13 +49,13 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-//    implementation 'com.google.android:flexbox:2.0.1'
+
+    implementation "androidx.fragment:fragment-ktx:1.3.5"
+
 
     // Navigation for Kotlin
     def nav_version = "2.3.5"
