--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
 
     implementation "androidx.work:work-runtime-ktx:2.5.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0-beta02"
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0"
 
 
     // Logging
