--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,8 @@ dependencies {
     implementation "com.squareup.moshi:moshi:1.11.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
     implementation "com.squareup.sqldelight:android-driver:1.5.0"
+    implementation "com.squareup.sqldelight:android-paging3-extensions:1.5.0"
+    implementation "com.squareup.sqldelight:coroutines-extensions-jvm:1.5.0"
     implementation "io.coil-kt:coil-base:1.2.2" // no Coil singleton and no ImageView extension functions
     implementation "io.coil-kt:coil-gif:1.2.2"
 
